# Zomato-AI-Suggest

./: .gitignore  Makefile  README.md  railway.json
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  deps.py  exceptions.py  main.py
backend/app/api/: debug.py  health.py  metadata.py  recommendations.py  router.py
backend/app/data/: __init__.py  ingest.py  repository.py
backend/app/models/: __init__.py  preferences.py  response.py  restaurant.py
backend/app/services/: __init__.py  filter.py  llm.py  orchestrator.py  parser.py  prompt.py  validator.py
backend/tests/: conftest.py  test_api.py  test_debug_api.py  test_filter.py  test_health.py  test_ingest.py  test_metadata_api.py  test_orchestrator.py  test_parser.py  test_repository.py  test_validator.py
backend/tests/fixtures/: llm_hallucinated_id.json  llm_invalid_json.txt  llm_valid.json  sample_restaurants.parquet
data/processed/: restaurants.parquet
docs/: architecture.md  dataSchema.md  deploymentPlan.md  edgecase.md  implementationPlan.md  problemStatement.md
docs/eval/: README.md
docs/eval/phase-0/: eval.md
docs/eval/phase-1/: eval.md
docs/eval/phase-2/: eval.md
docs/eval/phase-3/: eval.md
docs/eval/phase-4/: eval.md
docs/eval/phase-5/: eval.md
docs/eval/phase-6/: eval.md
docs/eval/phase-7/: eval.md
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
prompts/: recommend_v1.jinja2
scripts/: filter_smoke.py  groq_smoke.py  ingest.py  llm_smoke.py
tests/: README.md
(+7 files in other folders)
